--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -1,19 +1,24 @@
-# Read the Docs configuration file
-# See https://docs.readthedocs.io/en/stable/config-file/v2.html for details
-
-version: 2  # Required
-
-# Set the OS, Python version, and tools
+# Add this to your .readthedocs.yaml file
+# Tell Read the Docs which branch to use
 build:
-  os: ubuntu-22.04  # Use LTS version supported by Read the Docs
+  os: ubuntu-22.04
   tools:
-    python: "3.10"  # Python 3.13 is not stable/supported yet
+    python: "3.10"
 
-# Python dependencies for building the docs
+  # This ensures Read the Docs uses the right branch
+  clone:
+    depth: 50
+    shallow: true
+
+# Optional but recommended
+vcs:
+  type: git
+  update:
+    checkout: main  # Change 'main' to your actual branch name if different
+
 python:
   install:
     - requirements: docs/requirements.txt
 
-# Sphinx configuration
 sphinx:
   configuration: docs/conf.py
