--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -1,20 +1,12 @@
-# Add this to your .readthedocs.yaml file
-# Tell Read the Docs which branch to use
+# Read the Docs configuration file
+# See https://docs.readthedocs.io/en/stable/config-file/v2.html
+
+version: 2
+
 build:
   os: ubuntu-22.04
   tools:
     python: "3.10"
-
-  # This ensures Read the Docs uses the right branch
-  clone:
-    depth: 50
-    shallow: true
-
-# Optional but recommended
-vcs:
-  type: git
-  update:
-    checkout: main  # Change 'main' to your actual branch name if different
 
 python:
   install:
