--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -4,10 +4,20 @@ build:
   os: ubuntu-22.04
   tools:
     python: "3.10"
+  jobs:
+    pre_build:
+      - pip install --upgrade pip
+      - pip install -r docs/requirements.txt
+    build:
+      - sphinx-build -b html docs/ docs/_build/html -j auto
 
 python:
   install:
-    - requirements: docs/requirements.txt
+    - method: pip
+      path: .
+      extra_requirements:
+        - docs
 
 sphinx:
   configuration: docs/conf.py
+  fail_on_warning: false
