--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -14,9 +14,9 @@ scipy==1.11.3
 pyarrow==14.0.1
 
 # Documentation
-sphinx==7.2.6
-sphinx-rtd-theme==1.3.0
-myst-parser==2.0.0
+sphinx>=4.0.0
+sphinx-rtd-theme>=1.0.0
+myst-parser>=0.18.0
 
 
 
