--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -8,9 +8,15 @@ build:
     pre_build:
       - pip install --upgrade pip
       - pip install -r docs/requirements.txt
-    build:
-      commands:
-        - sphinx-build -b html docs/ docs/_build/html -j auto
+
+formats:
+  - pdf
+  - epub
+  - htmlzip
+
+sphinx:
+  configuration: docs/conf.py
+  fail_on_warning: false
 
 python:
   install:
@@ -18,7 +24,3 @@ python:
       path: .
       extra_requirements:
         - docs
-
-sphinx:
-  configuration: docs/conf.py
-  fail_on_warning: false
