--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -4,23 +4,11 @@ build:
   os: ubuntu-22.04
   tools:
     python: "3.10"
-  jobs:
-    pre_build:
-      - pip install --upgrade pip
-      - pip install -r docs/requirements.txt
 
-formats:
-  - pdf
-  - epub
-  - htmlzip
+python:
+  install:
+    - requirements: docs/requirements.txt
 
 sphinx:
   configuration: docs/conf.py
   fail_on_warning: false
-
-python:
-  install:
-    - method: pip
-      path: .
-      extra_requirements:
-        - docs
