--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,7 @@ dependencies = [
 ]
 
 [tool.setuptools]
-packages = ["app", "forecast"]
+packages = ["app", "forecast", "Dashboard_App"]
 
 [tool.setuptools]
 packages = ["app"]  # Remove "forecast" if it doesn't exist 
