--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,24 +1,12 @@
-# Core Requirements
-streamlit==1.29.0
-pandas==2.1.0
-numpy==1.26.0
-plotly==5.18.0
-
-# Machine Learning
-torch==2.1.0
-scikit-learn==1.3.0
-joblib==1.3.2
-
-# Data Processing
-scipy==1.11.3
-pyarrow==14.0.1
-
-# Documentation
-sphinx>=4.0.0
-sphinx-rtd-theme>=1.0.0
-myst-parser>=0.18.0
-
-
-
-
-# torch==2.1.0+cu118 --extra-index-url https://download.pytorch.org/whl/cu118
+# docs/requirements.txt
+# Python dependencies for building Read the Docs documentation
+sphinx
+sphinx-rtd-theme
+myst-parser
+pandas
+numpy
+plotly
+torch
+scikit-learn # 'sklearn' is installed via 'scikit-learn'
+joblib
+streamlit # <-- MAKE SURE THIS IS PRESENT AND UNCOMMENTED
